--- a/korean-public-api/korean-public-api-key.properties
+++ b/korean-public-api/korean-public-api-key.properties
@@ -1,1 +1,6 @@
-retriveNewAdressAreaCdService.key=
+# Service API KEY
+# Implementation Class  Name + ".key"
+#주소 검색
+NewAddressServiceImpl.key=
+#버스 위치 정보 조회
+ArvlInfoInqireServiceImpl.key=
